force-app/main/default/objects/CARE_Type__c/CARE_Type__c.object-meta.xml
<CustomObject>
    <label>Reason/Contact Maintenance</label>
    <nameField>
        <displayFormat>CTNO-{000000}</displayFormat>
        <label>Seq No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reason/Contact Maintenance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>