force-app/main/default/objects/CARE_Type__c/fields/CATEGORY__c.field-meta.xml
<CustomField>
    <fullName>CATEGORY__c</fullName>
    <label>CATEGORY</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CARE Enrollment Contact Codes</fullName>
            </value>
            <value>
                <fullName>CARE Non Profit Contact Codes</fullName>
            </value>
            <value>
                <fullName>CCB Person Level Contact Code and Comments</fullName>
            </value>
            <value>
                <fullName>CCB Person Level Enrollment Contact Codes</fullName>
            </value>
            <value>
                <fullName>Valid Rate Schedule</fullName>
            </value>
            <value>
                <fullName>Adjustment Reason</fullName>
            </value>
            <value>
                <fullName>AG Documentation Reason</fullName>
            </value>
            <value>
                <fullName>Facility Maintenance Reason</fullName>
            </value>
            <value>
                <fullName>MFHC Documentation Reason</fullName>
            </value>
            <value>
                <fullName>NP Documentation Reason</fullName>
            </value>
            <value>
                <fullName>On Demand Status Reason</fullName>
            </value>
            <value>
                <fullName>Reinstatement Reason</fullName>
            </value>
            <value>
                <fullName>Tenant Maintenance Reason</fullName>
            </value>
            <value>
                <fullName>Transfer Reason</fullName>
            </value>
            <value>
                <fullName>Language Source</fullName>
            </value>
            <value>
                <fullName>Residential HU Time-of-Use Rate</fullName>
            </value>
            <value>
                <fullName>Add Electric Gas Reason</fullName>
            </value>
            <value>
                <fullName>Valid SA status</fullName>
            </value>
            <value>
                <fullName>Automated Staging Enrollments Priority Order</fullName>
            </value>
            <value>
                <fullName>Online Submission</fullName>
            </value>
            <value>
                <fullName>PEV batch ESA status type</fullName>
            </value>
            <value>
                <fullName>PEV batch type</fullName>
            </value>
            <value>
                <fullName>PEV batch upload detail program type</fullName>
            </value>
            <value>
                <fullName>PEV batch upload status code</fullName>
            </value>
            <value>
                <fullName>PEV batch upload type</fullName>
            </value>
            <value>
                <fullName>PEV batch upload-from source code</fullName>
            </value>
            <value>
                <fullName>PEV CARE CC outbound header batch_type_no</fullName>
            </value>
            <value>
                <fullName>PEV CARE CC outbound detail status code</fullName>
            </value>
            <value>
                <fullName>PEV CARE CC outbound header status code</fullName>
            </value>
            <value>
                <fullName>PEV COC list</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>