force-app/main/default/objects/CARE_Type__c/fields/DISPLAY_ORDER__c.field-meta.xml
<CustomField>
    <fullName>DISPLAY_ORDER__c</fullName>
    <label>DISPLAY ORDER</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>