force-app/main/default/objects/CARE_Type__c/fields/EMAIL_BODY__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_BODY__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMAIL BODY</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>