force-app/main/default/objects/CARE_Type__c/fields/EMAIL_SUBJECT__c.field-meta.xml
<CustomField>
    <fullName>EMAIL_SUBJECT__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EMAIL SUBJECT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>