force-app/main/default/objects/CARE_Type__c/fields/IS_ACTIVE__c.field-meta.xml
<CustomField>
    <fullName>IS_ACTIVE__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IS ACTIVE</label>
    <type>Checkbox</type>
</CustomField>