force-app/main/default/objects/CARE_Type__c/fields/MULTIPLE_PLACE_HOLDER__c.field-meta.xml
<CustomField>
    <fullName>MULTIPLE_PLACE_HOLDER__c</fullName>
    <label>MULTIPLE PLACE HOLDER</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bullet</fullName>
            </value>
            <value>
                <fullName>Certified Report</fullName>
            </value>
            <value>
                <fullName>Failure Report</fullName>
            </value>
            <value>
                <fullName>Drop Report</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>