force-app/main/default/objects/CARE_Type__c/fields/TYPE_CODE__c.field-meta.xml
<CustomField>
    <fullName>TYPE_CODE__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TYPE CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>