force-app/main/default/objects/CARE_Type__c/fields/TYPE_DESC__c.field-meta.xml
<CustomField>
    <fullName>TYPE_DESC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>REASON(TYPE DESC)</label>
    <type>TextArea</type>
</CustomField>