force-app/main/default/objects/CARE_Type__c/fields/TYPE_DESC_LONG__c.field-meta.xml
<CustomField>
    <fullName>TYPE_DESC_LONG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TYPE DESC LONG</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>