force-app/main/default/objects/CARE_Type__c/fields/TYPE_NO__c.field-meta.xml
<CustomField>
    <fullName>TYPE_NO__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TYPE NO</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>