force-app/main/default/objects/CARE_Type__c/recordTypes/CC_Code_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>CC_Code_Maintenance</fullName>
    <active>true</active>
    <description>This Record Type is used for maintaining the CC codes.</description>
    <label>CC Code Maintenance</label>
</RecordType>