force-app/main/default/objects/CARE_Type__c/recordTypes/Misc.recordType-meta.xml
<RecordType>
    <fullName>Misc</fullName>
    <active>true</active>
    <description>This is the Miscellaneous Record type.</description>
    <label>Misc</label>
</RecordType>