force-app/main/default/objects/CARE_Type__c/recordTypes/Reason_Contact_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Reason_Contact_Maintenance</fullName>
    <active>false</active>
    <label>Reason/Contact Maintenance</label>
</RecordType>