force-app/main/default/objects/CARE_Type__c/recordTypes/Reason_Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Reason_Maintenance</fullName>
    <active>true</active>
    <description>This Record Type is used for maintaining the Reason field values.</description>
    <label>Reason Maintenance</label>
</RecordType>