force-app/main/default/objects/CARE_Type__c/recordTypes/Valid_Rate_Schedule.recordType-meta.xml
<RecordType>
    <fullName>Valid_Rate_Schedule</fullName>
    <active>true</active>
    <description>This Record Type is used for maintaining the Valid Rate schedule.</description>
    <label>Valid Rate Schedule</label>
</RecordType>