force-app/main/default/objects/CARE_Type__c/listViews/Add_Electric_Gas.listView-meta.xml
<ListView>
    <fullName>Add_Electric_Gas</fullName>
    <columns>NAME</columns>
    <columns>CATEGORY__c</columns>
    <columns>TYPE_DESC__c</columns>
    <columns>START_DATE__c</columns>
    <columns>END_DATE__c</columns>
    <columns>IS_ACTIVE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CATEGORY__c</field>
        <operation>equals</operation>
        <value>Add Electric Gas</value>
    </filters>
    <label>Add Electric Gas Reason</label>
    <sharedTo>
        <role>Application_Processor</role>
    </sharedTo>
</ListView>