force-app/main/default/objects/CARE_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>TYPE_NO__c</columns>
    <columns>CATEGORY__c</columns>
    <columns>TYPE_CODE__c</columns>
    <columns>TYPE_DESC__c</columns>
    <columns>TYPE_DESC_LONG__c</columns>
    <columns>COMMENTS__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>