force-app/main/default/objects/CARE_Type__c/listViews/CC_Code_Maintenance.listView-meta.xml
<ListView>
    <fullName>CC_Code_Maintenance</fullName>
    <columns>NAME</columns>
    <columns>CATEGORY__c</columns>
    <columns>TYPE_DESC__c</columns>
    <columns>TYPE_DESC_LONG__c</columns>
    <columns>TYPE_CODE__c</columns>
    <columns>TYPE_NO__c</columns>
    <columns>START_DATE__c</columns>
    <columns>END_DATE__c</columns>
    <columns>IS_ACTIVE__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CATEGORY__c</field>
        <operation>equals</operation>
        <value>CARE Enrollment Contact Codes,CARE Non Profit Contact Codes,CCB Person Level Contact Code and Comments,CCB Person Level Enrollment Contact Codes</value>
    </filters>
    <label>CC Code Maintenance</label>
    <sharedTo>
        <role>Application_Processor</role>
    </sharedTo>
</ListView>