force-app/main/default/objects/CARE_Type__c/listViews/Misc.listView-meta.xml
<ListView>
    <fullName>Misc</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CATEGORY__c</columns>
    <columns>TYPE_DESC__c</columns>
    <columns>DISPLAY_ORDER__c</columns>
    <columns>END_DATE__c</columns>
    <columns>IS_ACTIVE__c</columns>
    <columns>START_DATE__c</columns>
    <columns>COMMENTS__c</columns>
    <columns>TYPE_DESC_LONG__c</columns>
    <columns>TYPE_CODE__c</columns>
    <columns>TYPE_NO__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>CARE_Type__c.Misc</value>
    </filters>
    <label>Misc</label>
    <language>en_US</language>
</ListView>